--- a/hledger/hledger.cabal
+++ b/hledger/hledger.cabal
@@ -158,6 +158,7 @@ library
     , lucid
     , math-functions >=0.3.3.0
     , megaparsec >=7.0.0 && <9.2
+    , microlens >=0.4
     , mtl >=2.2.1
     , process
     , regex-tdfa
@@ -207,6 +208,7 @@ executable hledger
     , hledger-lib >=1.22.99 && <1.23
     , math-functions >=0.3.3.0
     , megaparsec >=7.0.0 && <9.2
+    , microlens >=0.4
     , mtl >=2.2.1
     , process
     , regex-tdfa
@@ -257,6 +259,7 @@ test-suite unittest
     , hledger-lib >=1.22.99 && <1.23
     , math-functions >=0.3.3.0
     , megaparsec >=7.0.0 && <9.2
+    , microlens >=0.4
     , mtl >=2.2.1
     , process
     , regex-tdfa
@@ -306,6 +309,7 @@ benchmark bench
     , html
     , math-functions >=0.3.3.0
     , megaparsec >=7.0.0 && <9.2
+    , microlens >=0.4
     , mtl >=2.2.1
     , process
     , regex-tdfa
