--- a/hledger/package.yaml
+++ b/hledger/package.yaml
@@ -112,6 +112,7 @@ dependencies:
 - githash >=0.1.4
 - haskeline >=0.6
 - megaparsec >=7.0.0 && <9.2
+- microlens >=0.4
 - mtl >=2.2.1
 - process
 - regex-tdfa
