--- a/hledger-lib/hledger-lib.cabal
+++ b/hledger-lib/hledger-lib.cabal
@@ -85,6 +85,7 @@ library
       Hledger.Utils.String
       Hledger.Utils.Test
       Hledger.Utils.Text
+      Hledger.Utils.TH
       Hledger.Utils.Tree
       Hledger.Utils.UTF8IOCompat
       Text.Tabular.AsciiWide
@@ -119,6 +120,7 @@ library
     , hashtables >=1.2.3.1
     , megaparsec >=7.0.0 && <9.2
     , microlens >=0.4
+    , microlens-th >=0.4
     , mtl >=2.2.1
     , parser-combinators >=0.4.0
     , pretty-simple >4 && <5
@@ -169,6 +171,7 @@ test-suite doctest
     , hashtables >=1.2.3.1
     , megaparsec >=7.0.0 && <9.2
     , microlens >=0.4
+    , microlens-th >=0.4
     , mtl >=2.2.1
     , parser-combinators >=0.4.0
     , pretty-simple >4 && <5
@@ -221,6 +224,7 @@ test-suite unittest
     , hledger-lib
     , megaparsec >=7.0.0 && <9.2
     , microlens >=0.4
+    , microlens-th >=0.4
     , mtl >=2.2.1
     , parser-combinators >=0.4.0
     , pretty-simple >4 && <5
