--- a/hledger/package.yaml
+++ b/hledger/package.yaml
@@ -71,6 +71,7 @@ extra-source-files:
 - Hledger/Cli/Commands/Stats.txt
 - Hledger/Cli/Commands/Tags.txt
 - Hledger/Cli/Commands/Test.txt
+- Hledger/Cli/Commands/Xact.txt
 
 
 #data-files:
@@ -178,6 +179,7 @@ library:
   - Hledger.Cli.Commands.Roi
   - Hledger.Cli.Commands.Stats
   - Hledger.Cli.Commands.Tags
+  - Hledger.Cli.Commands.Xact
   - Hledger.Cli.CompoundBalanceCommand
   dependencies:
   - Diff
